After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 746104 - Fix the lifetime of the signal handlers
Fix the lifetime of the signal handlers
Status: RESOLVED FIXED
Product: gnome-photos
Classification: Applications
Component: general
3.15.x
Other All
: Normal normal
: ---
Assigned To: GNOME photos maintainer(s)
GNOME photos maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2015-03-12 18:20 UTC by Debarshi Ray
Modified: 2015-05-19 08:23 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
embed: Fix the lifetime of the signal handlers (4.52 KB, patch)
2015-03-12 18:22 UTC, Debarshi Ray
committed Details | Review
selection-controller: Fix the lifetime of the signal handler (1.21 KB, patch)
2015-03-12 18:22 UTC, Debarshi Ray
committed Details | Review
view-container: Fix the lifetime of the signal handlers (2.77 KB, patch)
2015-03-12 18:23 UTC, Debarshi Ray
committed Details | Review
base-model: Fix the lifetime of the signal handlers (1.37 KB, patch)
2015-03-12 18:24 UTC, Debarshi Ray
committed Details | Review
view-model: Fix the lifetime of the signal handlers (1.81 KB, patch)
2015-03-12 18:24 UTC, Debarshi Ray
committed Details | Review
preview-view: Fix the lifetime of the signal handlers (1.26 KB, patch)
2015-05-19 08:22 UTC, Debarshi Ray
committed Details | Review

Description Debarshi Ray 2015-03-12 18:20:29 UTC
We are using g_signal_connect in a bunch of places where we should be using g_signal_connect_object instead. eg., widgets listening signals coming from singletons. These are potential crashers and we should fix them.
Comment 1 Debarshi Ray 2015-03-12 18:22:15 UTC
Created attachment 299222 [details] [review]
embed: Fix the lifetime of the signal handlers
Comment 2 Debarshi Ray 2015-03-12 18:22:48 UTC
Created attachment 299223 [details] [review]
selection-controller: Fix the lifetime of the signal handler
Comment 3 Debarshi Ray 2015-03-12 18:23:37 UTC
Created attachment 299225 [details] [review]
view-container: Fix the lifetime of the signal handlers
Comment 4 Debarshi Ray 2015-03-12 18:24:11 UTC
Created attachment 299227 [details] [review]
base-model: Fix the lifetime of the signal handlers
Comment 5 Debarshi Ray 2015-03-12 18:24:39 UTC
Created attachment 299228 [details] [review]
view-model: Fix the lifetime of the signal handlers
Comment 6 Pranav Kant 2015-03-13 13:26:46 UTC
Checked all of them, looks good to me. Neat !
Comment 7 Pranav Kant 2015-03-13 13:30:19 UTC
Looks good.
Comment 8 Ray Strode [halfline] 2015-03-13 19:11:50 UTC
Attachment 299222 [details] pushed as 3a82d18 - embed: Fix the lifetime of the signal handlers
Attachment 299223 [details] pushed as d70cb7a - selection-controller: Fix the lifetime of the signal handler
Attachment 299225 [details] pushed as 54a28f5 - view-container: Fix the lifetime of the signal handlers
Attachment 299227 [details] pushed as 9da59e2 - base-model: Fix the lifetime of the signal handlers
Attachment 299228 [details] pushed as 11cee45 - view-model: Fix the lifetime of the signal handlers
Comment 9 Debarshi Ray 2015-05-19 08:22:07 UTC
Created attachment 303574 [details] [review]
preview-view: Fix the lifetime of the signal handlers