embed: Fix the lifetime of the signal handlers

https://bugzilla.gnome.org/show_bug.cgi?id=746104